[gd_scene load_steps=12 format=4 uid="uid://y3frjc5br7ie"]

[ext_resource type="Script" path="res://scripts/basic_building.gd" id="1_oboy1"]
[ext_resource type="Texture2D" uid="uid://2gtg8vtktdi5" path="res://sprites/basicBlock.png" id="2_0dna4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jeln1"]
texture = ExtResource("2_0dna4")
4:2/size_in_atlas = Vector2i(1, 3)
4:2/0 = 0
4:2/0/y_sort_origin = 16
5:2/size_in_atlas = Vector2i(1, 3)
5:2/0 = 0
5:2/0/y_sort_origin = 16
6:2/size_in_atlas = Vector2i(1, 3)
6:2/0 = 0
6:2/0/y_sort_origin = 16
1:2/size_in_atlas = Vector2i(1, 3)
1:2/0 = 0
1:2/0/y_sort_origin = 16
2:2/size_in_atlas = Vector2i(1, 3)
2:2/0 = 0
2:2/0/y_sort_origin = 16
3:2/size_in_atlas = Vector2i(1, 3)
3:2/0 = 0
3:2/0/y_sort_origin = 16
14:2/size_in_atlas = Vector2i(1, 3)
14:2/0 = 0
15:2/size_in_atlas = Vector2i(1, 3)
15:2/0 = 0
16:2/size_in_atlas = Vector2i(1, 3)
16:2/0 = 0
11:2/size_in_atlas = Vector2i(1, 3)
11:2/0 = 0
11:2/0/y_sort_origin = 16
12:2/size_in_atlas = Vector2i(1, 3)
12:2/0 = 0
12:2/0/y_sort_origin = 16
11:1/0 = 0
11:1/0/z_index = 5
11:1/0/y_sort_origin = 8
12:1/0 = 0
12:1/0/z_index = 5
12:1/0/y_sort_origin = 8
7:2/0 = 0
7:2/0/z_index = 5
8:2/0 = 0
8:2/0/z_index = 5
9:2/0 = 0
9:2/0/z_index = 5
7:3/0 = 0
7:3/0/z_index = 5
8:3/0 = 0
8:3/0/z_index = 5
9:3/0 = 0
9:3/0/z_index = 5
0:4/0 = 0

[sub_resource type="TileSet" id="TileSet_1f630"]
sources/0 = SubResource("TileSetAtlasSource_jeln1")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u5q5n"]
texture = ExtResource("2_0dna4")
7:4/0 = 0
8:4/0 = 0

[sub_resource type="TileSet" id="TileSet_itwp1"]
sources/0 = SubResource("TileSetAtlasSource_u5q5n")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sbxnj"]
texture = ExtResource("2_0dna4")
14:2/size_in_atlas = Vector2i(1, 3)
14:2/0 = 0
14:2/0/y_sort_origin = 24
15:2/size_in_atlas = Vector2i(1, 3)
15:2/0 = 0
15:2/0/y_sort_origin = 24
16:2/size_in_atlas = Vector2i(1, 3)
16:2/0 = 0
16:2/0/y_sort_origin = 24
14:1/0 = 0
14:1/0/y_sort_origin = -8
15:1/0 = 0
15:1/0/y_sort_origin = -8
16:1/0 = 0
16:1/0/y_sort_origin = -8
15:0/0 = 0
15:0/0/y_sort_origin = -8
14:0/0 = 0
14:0/0/y_sort_origin = -8
13:0/0 = 0
13:0/0/y_sort_origin = -8
13:1/0 = 0
13:1/0/y_sort_origin = -8
16:0/0 = 0
16:0/0/y_sort_origin = -8
17:1/0 = 0
17:1/0/y_sort_origin = -8
12:0/0 = 0
12:0/0/y_sort_origin = -8
11:0/0 = 0
11:0/0/y_sort_origin = -8
9:0/0 = 0
9:0/0/y_sort_origin = -8
10:0/0 = 0
10:0/0/y_sort_origin = -8
13:2/0 = 0
13:2/0/y_sort_origin = -8
17:2/0 = 0
17:2/0/y_sort_origin = -8
18:2/size_in_atlas = Vector2i(1, 3)
18:2/0 = 0
18:2/0/y_sort_origin = 24
19:2/size_in_atlas = Vector2i(1, 3)
19:2/0 = 0
19:2/0/y_sort_origin = 24
18:1/0 = 0
18:1/0/z_index = 5
18:1/0/y_sort_origin = 7
19:1/0 = 0
19:1/0/z_index = 5
19:1/0/y_sort_origin = 7

[sub_resource type="TileSet" id="TileSet_pu7wf"]
sources/0 = SubResource("TileSetAtlasSource_sbxnj")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_13od0"]
texture = ExtResource("2_0dna4")
7:4/0 = 0
7:4/0/y_sort_origin = 8
8:4/0 = 0

[sub_resource type="TileSet" id="TileSet_l6bpm"]
sources/0 = SubResource("TileSetAtlasSource_13od0")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wj6jb"]
size = Vector2(112, 65)

[node name="basicBuilding" type="Node2D"]
y_sort_enabled = true
position = Vector2(-8, 8)
script = ExtResource("1_oboy1")

[node name="Front" type="TileMapLayer" parent="."]
visible = false
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD//wAAAAAFAAIAAAAAAAAAAAAFAAIAAAD+/wAAAAALAAIAAAABAAAAAAAMAAIAAAD+//7/AAAHAAMAAAABAP7/AAAJAAMAAAABAP3/AAAMAAEAAAD+//3/AAALAAEAAAD///7/AAAIAAMAAAAAAP7/AAAIAAMAAAD///3/AAAIAAIAAAAAAP3/AAAIAAIAAAA=")
tile_set = SubResource("TileSet_1f630")

[node name="FrontDoor" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_itwp1")

[node name="Back" type="TileMapLayer" parent="."]
modulate = Color(1, 1, 1, 0.607843)
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD+/wEAAAAJAAAAAAABAAEAAAAKAAAAAAD//wEAAAANAAEAAAD+//3/AAASAAEAAAABAP3/AAATAAEAAAD///7/AAAPAAIAAAAAAP7/AAAPAAIAAAD//wAAAAANAAAAAAAAAAAAAAANAAAAAAAAAAEAAAANAAEAAAD+////AAASAAIAAAABAP//AAATAAIAAAA=")
tile_set = SubResource("TileSet_pu7wf")

[node name="BackDoor" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_l6bpm")

[node name="collShape" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collShape"]
polygon = PackedVector2Array(-32, 24, -17, 32, 17, 32, 32, 24, 32, 8, 17, 0, -17, 0, -32, 8)

[node name="fadeArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="fadeArea"]
position = Vector2(0, -32.5)
shape = SubResource("RectangleShape2D_wj6jb")

[node name="Center" type="Marker2D" parent="."]

[connection signal="body_entered" from="fadeArea" to="." method="_on_fade_area_body_entered"]
[connection signal="body_exited" from="fadeArea" to="." method="_on_fade_area_body_exited"]
